gcc/testsuite/gcc.dg/noncompile/incomplete-4.c
/* { dg-require-effective-target gcc_frontend } */
void foo()
{
  enum E e; /* { dg-error "storage size" } */
}
